# inversion-examples

./: LICENSE  README.md  bayesian_inversion_example.ipynb  pyproject.toml  regularised_inversion_example.ipynb
