[tool.poetry]
name = "inversion-examples"
version = "0.1.0"
description = ""
authors = ["Luke Griffiths <griff.luke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
